[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wacht"
version = "1.1.0"
description = "Live reload HTTP server for web development"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "wako"}]
requires-python = ">=3.10"
keywords = ["web", "server", "reload", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = []

[project.scripts]
wacht = "wacht:main"

[project.urls]
Repository = "https://github.com/wakodiwe/wacht"

[tool.setuptools.packages.find]
where = ["."]
include = ["wacht*"]
